--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint.cmd src/** test/** --fix",
-    "secure-mode": "jest --watch"
+    "secure-mode": "jest --watch --verbose=true"
   },
   "keywords": [],
   "author": "",
