--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "body-parser": "1.18.3",
-    "express": "4.16.4"
+    "consign": "0.1.6",
+    "express": "4.16.4",
+    "knex": "^0.95.12",
+    "pg": "^8.7.1"
   }
 }
