--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint.cmd src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=true"
+    "secure-mode": "jest --watchAll --verbose=true"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "consign": "0.1.6",
     "express": "4.16.4",
     "knex": "^0.95.12",
+    "knex-logger": "^0.1.0",
     "pg": "^8.7.1"
   }
 }
