--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "linebreak-style": "off",
         "arrow-body-style": "off",
         "max-len": "off",
-        "consistent-return": "off"
+        "consistent-return": "off",
+        "no-multiple-empty-lines": "off"
     }
 }
